creusot/tests/should_fail/diagnostics/view_unimplemented.stderr
error[E0599]: Cannot take the model of `S`
  --> view_unimplemented.rs:9:15
   |
5  | struct S;
   | -------- method `view` not found for this struct because it doesn't satisfy `S: creusot_contracts::View`
...
9  |     let _ = x.view();
   |               ^^^^ no implementation for `S@`
   |
   = note: the following trait bounds were not satisfied:
           `S: creusot_contracts::View`
           which is required by `&S: creusot_contracts::View`
           `S: creusot_contracts::View`
           `S: creusot_contracts::View`
           which is required by `&mut S: creusot_contracts::View`
note: the trait `creusot_contracts::View` must be implemented
  --> ./creusot-contracts/src/model.rs:12:1
   |
12 | pub trait View {
   | ^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `view`, perhaps you need to implement it:
           candidate #1: `creusot_contracts::View`

error[E0277]: Cannot take the model of `S`
  --> view_unimplemented.rs:14:25
   |
14 |     let _ = pearlite! { x@ };
   |                         ^-
   |                         |
   |                         no implementation for `S@`
   |                         required by a bound introduced by this call
   |
   = help: the trait `creusot_contracts::View` is not implemented for `S`
   = help: the following other types implement trait `creusot_contracts::View`:
             &T
             &mut T
             *const T
             *mut T
             [T; N]
             [T]
             creusot_contracts::GhostBox<T>
             creusot_contracts::Snapshot<T>
           and 41 others

error[E0277]: Cannot take the model of `S`
  --> view_unimplemented.rs:14:25
   |
14 |     let _ = pearlite! { x@ };
   |                         ^^ no implementation for `S@`
   |
   = help: the trait `creusot_contracts::View` is not implemented for `S`
   = help: the following other types implement trait `creusot_contracts::View`:
             &T
             &mut T
             *const T
             *mut T
             [T; N]
             [T]
             creusot_contracts::GhostBox<T>
             creusot_contracts::Snapshot<T>
           and 41 others

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
